<resources>
    <string name="app_name">MyKid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_activity_name">Enter activity name</string>
    <string name="asterisk">*</string>
    <string name="activity_name">Activity Name :</string>
    <string name="location">Location :</string>
    <string name="add_location">Add location</string>
    <string name="date">Date:</string>
    <string name="add_date">Add date</string>
    <string name="time">Time :</string>
    <string name="enter_name">Enter name</string>
    <string name="complete">Complete</string>
    <string name="reporter_name">Reporter Name :</string>
    <string name="add_time">Add time</string>
    <string name="click_button_to_add_time">Click button to add time</string>
    <string name="click_button_to_add_date">Click button to add date</string>
    <string name="click_button_to_add_location">Click button to add location</string>
    <string name="show_location_in_map">Show Location in Map</string>

    <string name="map_key" translatable="false">AIzaSyBvCp2gr6SrB9TAfZhrAVlLMbpb81fKrNg</string>
    <string name="please_enter_activity_name">Please enter activity name</string>
    <string name="please_pick_a_date">Please pick a date</string>
    <string name="please_pick_a_time">Please pick a time</string>
    <string name="please_enter_reporter_name">Please enter reporter name</string>

    <string name="no_address_found">No address found</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="location_permission_denied">Location permissions denied,
        please enable the permissions to use this app.</string>
    <string name="search_for_location">Search for location</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="change_date">Change date</string>
    <string name="change_time">change time</string>
    <string name="save">Save</string>
    <string name="change_location">Change location</string>
    <string name="add_report">Add Report</string>
    <string name="report_details">Report Details</string>
    <string name="edit_report">Edit Report</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image">Image :</string>
    <string name="remove_current_image">Remove Current Image</string>
    <string name="deleteall">Delete All</string>
</resources>