<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".DetailFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddReportFrag">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/asterisk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/actNameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_name"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/actNameEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_activity_name"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/actErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_activity_name"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/locationTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/locationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/change_location"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/locationInputTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/editTextBackground"
        android:gravity="center_vertical"
        android:hint="@string/click_button_to_add_location"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        android:textSize="18sp"
        android:layout_weight="1.8"/>

    <ImageButton
        android:id="@+id/clearLocationBtn"
        android:layout_width="29dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        android:layout_weight="0.2"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/asterisk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asterisk"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/actDateTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/change_date"
        android:layout_marginStart="10dp"/>
</LinearLayout>

    <TextView
        android:id="@+id/dateInputTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/editTextBackground"
        android:gravity="center_vertical"
        android:hint="@string/click_button_to_add_date"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dateErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_pick_a_date"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/asterisk3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Button
            android:id="@+id/timeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/change_time"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/timeInputTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/editTextBackground"
        android:gravity="center_vertical"
        android:hint="@string/click_button_to_add_time"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timeErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_pick_a_time"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/asterisk4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/reporterNameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporter_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/reporterNameEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/reporterErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_reporter_name"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/imageTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imageBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="ContentDescription"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/removeImgBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/remove_current_image"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/completeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

</LinearLayout>
    </ScrollView>
</LinearLayout>